[SNAPSHOT]
 * DELETE in JdkClient permits, but not requires payload (thanks to https://github.com/miguelD73)

[4.1.2]
 * LinkedIn use Header to sign OAuth2 requests
 * upgrade ServiceBuilder to check apiKey preconditions compile-time (not run-time)
 * update Live API (thanks to https://github.com/typhoon17)

[4.1.1]
 * omit the client_secret parameter if it is an empty string while refreshing token (thanks to https://github.com/KungfuPancake)
 * allow perms to be specified in Flickr Api (read, write, or delete) (thanks to https://github.com/rogerhu)
 * OdnoklassnikiService should consider params in a body while signing the request (thanks to https://github.com/MrNeuronix)
 * do not open OutputStream for output while sending empty body in HTTP requests in the default JDK Http client

[4.1.0]
 * make client_secret optional in OAuth2 while requesting AccessToken (if set to null, it's not required by OAuth2 specs)
 * move OAuth1 SignatureType from ServiceBuilder to API
 * add body for PATCH HTTP method
 * make addOAuthParams appendSignature methods protected in OAuth10aService (to override them in case of need) (thanks to https://github.com/vivin)

[4.0.0]
 * Remove OAuthRequestAsync, just OAuthRequest. Request should know about sync vs async. Move default Http engine to JDKHttpClient.
 * introduce SignatureType for OAuth2.0 to implement Bearer signing for the requests
 * switch Google, GitHub, Facebook OAuth2.0 oauth requests signing to more secured recommended variant (GET-param -> header Bearer)
 * introduce custom nonstandard Facebook AccessTokenErrorResponse

[3.4.1]
 * Drop deprecated methods
 * Move doktornarabote.ru urls to https (thanks to https://github.com/ezibrov)

[3.4.0]
 * uncouple OAuthRequest and Service. OAuthRequest shouldn't know anything about OAuthservice.
   You don't need OAuthService to create OAuthRequest anymore. Async request should be sent via OAuthService method.